# Lc3-VirtualMachine

./: CMakeLists.txt  README.md
src/: console.c  console.h  cpu.c  cpu.h  defs.h  firmware.c  firmware.h  log.c  log.h  main.c  obj_loader.c  obj_loader.h  utils.c  utils.h
